2010-10-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Remove expired cookies first when cookies_ is full.
	* src/CookieStorage.cc

2010-10-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Rewritten util::split()
	* src/util.h
	* test/UtilTest.cc

2010-10-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Code cleanup
	* src/cookie_helper.cc

2010-10-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Replaced util::split(a,b,c) and util::split(a,b) with
	util::divide()
	* src/ExpatMetalinkProcessor.cc
	* src/FtpConnection.cc
	* src/HttpHeader.cc
	* src/HttpResponse.cc
	* src/HttpServer.cc
	* src/OptionParser.cc
	* src/ParameterizedStringParser.cc
	* src/ServerStatMan.cc
	* src/magnet.cc
	* src/util.cc
	* src/util.h
	* test/UtilTest.cc

2010-10-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Append 'u' to hex mask.
	* src/Base64.cc
	* src/BitfieldMan.cc
	* src/BtHandshakeMessage.cc
	* src/BtHandshakeMessage.h
	* src/DHTBucket.cc
	* src/DHTRoutingTableDeserializer.cc
	* src/DHTRoutingTableSerializer.cc
	* src/DefaultBtProgressInfoFile.cc
	* src/MSEHandshake.h
	* src/MultiUrlRequestInfo.cc
	* src/Platform.cc
	* src/SpeedCalc.cc
	* src/UTPexExtensionMessage.cc
	* src/a2netcompat.h
	* src/base32.cc
	* src/bitfield.h
	* src/bittorrent_helper.cc
	* src/cookie_helper.cc
	* src/util.h

2010-10-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added util::lowercase() and util::uppercase().
	* src/cookie_helper.cc
	* src/util.cc
	* src/util.h
	* test/UtilTest.cc

2010-10-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added test cases for util::parseUIntNoThrow() and
	util::parseLLIntNoThrow().
	* test/UtilTest.cc

2010-10-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Use util::strip() instead of util::trim()
	* src/ExpatXmlRpcRequestProcessor.cc
	* src/FeatureConfig.cc
	* src/HttpHeader.cc
	* src/MetalinkParserStateV3Impl.cc
	* src/OptionHandlerImpl.h