@@ -55,12 +55,12 @@ public:
   // Loads cookies from sqlite3 database and stores them in cookies.
   // When loading is successful, cookies stored in cookies initially
   // are removed. Otherwise, the content of cookies is unchanged.
-  void parse(std::vector<Cookie>& cookies, time_t creationTime);
+  void parse(std::vector<Cookie>& cookies);
 protected:
   // Returns SQL select statement to get 1 record of cookie.  The sql
   // must return 6 columns in the following order: host, path,
   // secure(1 for secure, 0 for not), expiry(utc, unix time), name,
-  // value
+  // value, last access time(utc, unix time)
   virtual const std::string& getQuery() const = 0;
 private:
   sqlite3* db_;
